@@ -14,6 +14,7 @@ use IkiWiki::Setup::Standard {
 	syslog => 0,
 	userdir => "users",
 	usedirs => 0,
+	indexpages => 1,
 	prefix_directives => 1,
 	add_plugins => [qw{goodstuff version haiku polygen fortune}],
 }
